--- a/config_tproxy.json
+++ b/config_tproxy.json
@@ -65,24 +65,10 @@
   },
   "inbounds": [
     {
-      "type": "tun",
-      "tag": "tun-in",
-      "interface_name": "tun0",
-      "mtu": 1500,
-      "stack": "mixed",
-      "auto_route": true,
-      "strict_route": true,
-      "sniff": true,
-      "sniff_override_destination": true
-    },
-    // 新增混合代理接口 (SOCKS5 + HTTP)
-    {
-      "type": "mixed",
-      "tag": "mixed-in",
+      "type": "tproxy",
+      "tag": "tproxy-in",
       "listen": "0.0.0.0",
-      "listen_port": 1080,
-      "sniff": true,
-      "set_system_proxy": false  // 避免冲突，手动配置系统代理
+      "listen_port": 1080
     }
   ],
   "outbounds": [
@@ -216,6 +202,7 @@
   "route": {
     "auto_detect_interface": true,
     "final": "♻️ 自动选择",
+    "default_mark": 666,
     "rules": [
       {
         "action": "sniff"
